<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.  ouyangzn   <email : ouyangzn@163.com>
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="@dimen/spacing_normal"
      android:paddingRight="@dimen/spacing_normal"
      >
    <TextView
        android:id="@+id/tv_repo_detail_owner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        android:gravity="center_vertical"
        android:text="@string/repo_detail_owner"
        />
    <View style="@style/style_divider_line"/>
    <TextView
        android:id="@+id/tv_repo_detail_language"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        android:gravity="center_vertical"
        android:text="@string/repo_detail_language"
        />
    <View style="@style/style_divider_line"/>
    <TextView
        android:id="@+id/tv_repo_detail_url"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        android:gravity="center_vertical"
        android:text="@string/repo_detail_url"
        />
    <View style="@style/style_divider_line"/>
    <TextView
        android:id="@+id/tv_repo_detail_latest_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        android:gravity="center_vertical"
        android:text="@string/repo_detail_latest_commit"
        />
    <View style="@style/style_divider_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_item"
        android:gravity="center_vertical"
        android:text="@string/repo_detail_description"
        />
    <TextView
        android:id="@+id/tv_repo_detail_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/spacing_normal"
        />
  </LinearLayout>
</ScrollView>
