<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016.  ouyangzn   <email : ouyangzn@163.com>
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >
  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:layout_marginTop="50dp"
      android:src="@mipmap/ic_logo"
      />
  <com.ouyangzn.github.view.InputEdit
      android:id="@+id/input_login_username"
      android:layout_width="200dp"
      android:layout_height="50dp"
      app:editBg="@drawable/bg_bottom_line_light_blue"
      app:inputType="text"
      app:input_hint="@string/username_github"
      app:singleLine="true"
      />
  <com.ouyangzn.github.view.InputEdit
      android:id="@+id/input_login_password"
      android:layout_width="200dp"
      android:layout_height="50dp"
      android:layout_marginTop="@dimen/spacing_tiny"
      app:editBg="@drawable/bg_bottom_line_light_blue"
      app:inputType="textPassword"
      app:input_hint="@string/password_github"
      app:singleLine="true"
      />
  <Button
      android:id="@+id/btn_login"
      android:layout_marginTop="@dimen/spacing_normal"
      android:text="@string/login"
      style="@style/style_btn_middle_corners5_blue"
      />
  <TextView
      android:id="@+id/tv_login_just_browsing"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/spacing_normal"
      android:background="@drawable/bg_bottom_line_light_blue"
      android:padding="@dimen/padding_small"
      android:text="@string/login_just_browsing"
      />
</LinearLayout>